results/SpecGenBench/4-shot/log-MatrixMul-2023_11_27_23_04_06.txt
public class MatrixMul {
    
    //@ requires a.length == 2 && a[0].length == 2 && b.length == 2 && b[0].length == 2;
    //@ ensures \result.length == 2 && \result[0].length == 2;
    //@ ensures \result[0][0] == a[0][0]*b[0][0] + a[0][1]*b[1][0] && \result[0][1] == a[0][0]*b[0][1] + a[0][1]*b[1][1];
    //@ ensures \result[1][0] == a[1][0]*b[0][0] + a[1][1]*b[1][0] && \result[1][1] == a[1][0]*b[0][1] + a[1][1]*b[1][1];
    public int[][] multiply(int[][] a, int[][] b) {
        int[][] c = new int[2][2];
        for (int i = 0; i < 2; i++) {
            for (int j = 0; j < 2; j++) {
                c[i][j] = a[i][0] * b[0][j] + a[i][1] * b[1][j];
            }
        }
        return c;
    }

}
/home/max/Documents/JMLGPT/tmp/MatrixMul.java:11: error: A catastrophic JML internal error occurred.  Please report the bug with as much information as you can.
                c[i][j] = a[i][0] * b[0][j] + a[i][1] * b[1][j];
                  ^
  Reason: Double rewriting of ident: i i_530_530___37 i_530_544___40
1 error

